[metadata]
name = astvalidate
version = 0.2.0
url = https://github.com/isidentical/astvalidate
author = isidentical
author_email = isidentical@gmail.com
description = Easy AST validation
long_description = file: README.md
long_description_content_type = text/markdown
license-file = LICENSE.txt

[options]
packages = astvalidate, astvalidate.validators
python_requires = >=3.8

[bdist_wheel]
universal = True
