[metadata]
name = astvalidate
version = 2021.12.31
description = Advanced AST validation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/astvalidate
author = isidentical
author_email = isidentical@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = astvalidate, astvalidate.validators
python_requires = >=3.8

[bdist_wheel]
universal = True
